adding final functions

--- a/create/index.html
+++ b/create/index.html
@@ -21,15 +21,16 @@
     </header>    
     <button id="logout">Logout</button>
     <main>
-        <a href="../workshops/">View workshops</a>
-        <h1>Create a participant</h1>
-        <form id="new-participant">
-            <label for="name">Name: <input type="text" name="name" /></label>
-            <label for="contact"> Contact: <input type="text" name="contact" /></label>
-            <select name="workshop_id" id="workshops">
-                <button>Add participant</button>
-            </select>
+      <a href="../workshops/">View workshops</a>
+      <h1>Create a participant</h1>
+      <form id="new-participant">
+        <label for="name">Name: <input type="text" name="name" /></label>
+        <label for="contact"> Contact: <input type="text" name="contact" /></label>
+        <select name="workshop_id" id="workshops">
+        </select>
+        <button>Add participant</button>
         </form>
+        </main>
         <script src="./create.js" type="module"></script>
     </body>
 </html>
