--- a/workshops/index.html
+++ b/workshops/index.html
@@ -12,16 +12,16 @@
     </head>
     <body>
         <header>
-        <div class="gutter-right logo">
+        <!-- <div class="gutter-right logo">
             <img src="../assets/big-logo.png" />
-        </div>
+        </div> -->
     </header>    
     <button id="logout">Logout</button>
+    <a href="../create/">Add participant</a>
     <main>
-        <a href="../create/">Add participant</a>
-        <h1>All workshops:</h1>
         <section class="workshops-list">
-
+          
+          <h1>All workshops:</h1>
         </section>
         </main>
         <script type="module" src="./workshops.js"></script>
